Fixed openapi
